--- a/view/menuAdmin.html
+++ b/view/menuAdmin.html
@@ -1,5 +1,6 @@
 <div class="menu">
     <a href="user/profile">Home</a>
+    <a href="User/users">Users</a>
     <a href="book/index">Reservation</a>
     <a href="user/logout">Log Out</a>
 </div>
