edit user - > bouton edit ok

--- a/view/menuAdmin.html
+++ b/view/menuAdmin.html
@@ -2,6 +2,7 @@
     <a href="user/profile">Home</a>
     <a href="User/users">Users</a>
     <a href="book/index">Reservation</a>
+    <a href="book/return_book">Return</a>
     <a href="user/logout">Log Out</a>
 </div>
 
