--- a/view/menuAdmin.html
+++ b/view/menuAdmin.html
@@ -4,5 +4,6 @@
     <a href="book/index">Reservation</a>
     <a href="rental/return_book">Return</a>
     <a href="user/logout">Log Out</a>
+     <a href="user/exerciceAjax">exercice</a>
 </div>
 
