nettoyage espace sur input search book

--- a/view/menuAdmin.html
+++ b/view/menuAdmin.html
@@ -3,7 +3,7 @@
     <a href="User/users">Users</a>
     <a href="book/index">Reservation</a>
     <a href="rental/return_book">Return</a>
+    <a href="user/exerciceAjax">clear basket</a>
     <a href="user/logout">Log Out</a>
-     <a href="user/exerciceAjax">exercice</a>
 </div>
 
